--- a/css/style.css
+++ b/css/style.css
@@ -764,7 +764,7 @@ color: #2E2F42;
 .modal-form-input {
   width: 100%;
   height: 40px;
-  margin-bottom: 8px;
+  
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   padding-left: 42px;
@@ -795,6 +795,7 @@ color: #2E2F42;
 
 .modal-form-field {
   margin-bottom: 8px;
+  
 }
 
 .input-wrapper {
@@ -844,31 +845,11 @@ line-height: 16px;
 letter-spacing: 0.04em;
 display: flex;
 align-items: center;
-
+margin-bottom: 24px;
 color: #757575;
 }
 
-.checkbox-description::before {
-  content: "";
-  display: block;
-  width: 16px;
-  height: 16px;
-  border: 1.25px solid #2E2F42;
-border-radius: 2px;
-cursor: pointer;
-margin-right: 8px;
-margin-bottom: 24px;
-}
-.modal-form-checkbox:checked + .checkbox-description::before {
-border-image: url();
-}
 
-.modal-form-checkbox:focus + .checkbox-description::before {
-  border-color: var(--iris-color);
-  outline: none;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-}
 .modal-form-submit {
   padding: 16px 32px;
   min-width: 169px;
@@ -885,5 +866,17 @@ border-image: url();
 }
 .modal-form-submit:hover,
 .modal-form-submit:focus {
+  background-color: var(--ocean-color);
+}
+
+/*-------checkbox-------*/
+.checkbox-form {
+  width: 16px;
+  height: 16px;
+  border-radius: 2px;
+  border: 1.25px solid #2E2F42;
+}
+.modal-form-check:checked + .checkbox-form {
+  background-image: url(../images/Vector.svg);
   background-color: var(--ocean-color);
 }
