--- a/css/style.css
+++ b/css/style.css
@@ -851,12 +851,18 @@ color: #757575;
 
 
 .modal-form-submit {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 16px;
   padding: 16px 32px;
   min-width: 169px;
-  min-height: 56px;
+  height: 40px;
   margin-left: auto;
   margin-right: auto;
+  font-family: inherit;
   font-size: 16px;
+  font-weight: 500;
   color: var(--body-background-color);
   border: none;
   background-color: var(--iris-color);
@@ -864,10 +870,49 @@ color: #757575;
   border-radius: 4px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
 }
+.submit-button {
+  width: 169px;
+  height: 56px;
+}
 .modal-form-submit:hover,
 .modal-form-submit:focus {
   background-color: var(--ocean-color);
 }
+
+.policy-link {
+color: var(--iris-color);
+}
+
+.footer-subscribe-container {
+  margin-left: auto;
+}
+
+.footer-modal-form-field {
+  display: flex;
+  gap: 24px;
+}
+.footer-field-input {
+  background-color: transparent;
+  width: 264px;
+  height: 40px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  padding: 8px 16px;
+  color: rgba(255, 255, 255, 0.6);
+  letter-spacing: 0.04em;
+}
+.footer-subscribe-paragraph {
+
+font-weight: 500;
+font-size: 16px;
+line-height: calc(24/16);
+margin-bottom: 16px;
+
+letter-spacing: 0.02em;
+
+color: #FFFFFF;
+}
+
 
 /*-------checkbox-------*/
 .checkbox-form {
@@ -875,6 +920,9 @@ color: #757575;
   height: 16px;
   border-radius: 2px;
   border: 1.25px solid #2E2F42;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  margin-right: 8px;
 }
 .modal-form-check:checked + .checkbox-form {
   background-image: url(../images/Vector.svg);
